--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -368,7 +368,7 @@ Regarding self-reported arousal, results showed significant higher subjective ar
 However, ER strategies did not lead to a reduction of subjective arousal compared to active viewing of negative pictures.
 Regarding physiological responses, ER strategies were associated with reduced facial muscle activity of the \emph{corrugator} and \emph{levator} compared to active viewing of negative pictures.
 In accordance with our previous study\textsuperscript{22}, we found that the use of ER strategies compared to active viewing was associated with increased subjective effort.
-All results are detailed in the \protect\hyperlink{SupplementaryMaterial}{Supplementary Material}, figures S1 to S7 and table S2 to S8.
+All results are detailed in the OSF repository (\url{https://osf.io/vnj8x/}).
 
 \hypertarget{design}{%
 \subsection{2.3 Design}\label{design}}
@@ -534,7 +534,7 @@ Residuals of the final model were inspected visually.
 Intraclass correlation coefficient (ICC), \(\rho\), was reported for each model (null model, as well as full model).
 The presented MLM followed the conceptualization of Zerna, Scheffel, et al.\textsuperscript{34}
 
-To investigate whether individual SVs predict ER choice (H7a), a Chi-squared test with predicted choice (highest SV of each participant) and actual choice was computed.
+To investigate whether individual SVs predict ER choice (H7a), a \(\chi{2}\) test with predicted choice (highest SV of each participant) and actual choice was computed.
 Furthermore, an ordinal logistic regression with the dependent variable choice and independent variables SVs of each strategy was computed.
 
 The association between flexible ER and SVs of ER strategies (H7b) was investigated with a linear regression using the individual \(intercept\) and \(slope\) of each participants' SVs to predict their FlexER score.
@@ -582,28 +582,39 @@ Please note that sample size for individual calculations may be smaller due to f
 \hypertarget{subjective-arousal-and-physiological-responding}{%
 \paragraph{Subjective arousal and physiological responding}\label{subjective-arousal-and-physiological-responding}}
 
-To explore whether negative pictures evoke emotional arousal, we conducted an ANOVA for the active viewing condition.
-We found a highly significant main effect of valence (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 1.47 \times 10^{44}\)), indicating that negative pictures were perceived as more arousing than neutral pictures (\(\eta_{p}^{2}=0.77, [0.72, 1.00]\), \(BF_{10}=\)\(3.22 \times 10^{36}\)).
-To explore the effect of valence on facial muscle activity(\emph{Corrugator} and \emph{Levator}), we conducted two ANOVA for the active viewing condition.
-For \emph{Corrugator} activity, we found a significant main effect of valence (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.67 \times 10^{16}\)), indicating that negative pictures evoked greater \emph{Corrugator} activity than neutral pictures (\(\eta_{p}^{2}=0.19, [0.10, 1.00]\), \(BF_{10}=\)\(8.67 \times 10^{16}\)).
-In line with previously reported results, there was a significant main effect of valence for \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\)´, \(\mathrm{BF}_{\textrm{10}} = 188.72\)), indicating that negative pictures evoked greater \emph{Levator} activity than neutral pictures (\(\eta_{p}^{2}=0.07, [0.01, 1.00]\), \(BF_{10}=\)\(1.89 \times 10^{2}\)).
+To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate ANOVAs for the active viewing condition with predictors subjective arousal, \emph{Corrugator}, and \emph{Levator} activity.
+We found a highly significant main effect of valence for subjective arousal (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 1.47 \times 10^{44}\)), \emph{Corrugator} activity (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.67 \times 10^{16}\)), and \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\)´, \(\mathrm{BF}_{\textrm{10}} = 188.72\)), indicating that negative pictures successfully evoked emotional arousal and physiological responding.
 
-To investigate whether ER strategies reduce emotional arousal, we conducted an rmANOVA comparing the subjective arousal ratings of four strategies (active viewing, distraction, distancing, suppression).
-We found a significant effect of strategy (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)).
-Post-hoc test showed significantly reduced subjective arousal after use of distraction (\(\eta_{p}^{2}=0.05, [0.02, 1.00]\), \(BF_{10}=\)\(1.68 \times 10^{2}\)), distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\)\(6.30 \times 10^{1}\)), and suppression (\(\eta_{p}^{2}=0.02, [0.00, 1.00]\), \(BF_{10}=\)\(1.97\)) compared to active viewing.
-However, there were no significant differences between strategies (all \(p>.05\)).
-To explore whether ER strategies reduce physiological responding, we conducted another two rmANOVA comparing \emph{Corrugator} activity and \emph{Levator} activity of four the strategies.
-Regarding \emph{Corrugator} activity, we found a significant main effect of factor strategy (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)).
-Post-hoc test revealed reduced \emph{Corrugator} activity during distraction (\(\eta_{p}^{2}=0.06, [0.03, 1.00]\), \(BF_{10}=\)\(2.19 \times 10^{4}\)), distancing (\(\eta_{p}^{2}=0.07, [0.03, 1.00]\), \(BF_{10}=\)\(1.40 \times 10^{5}\)), and suppression (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\)\(1.84 \times 10^{7}\)) compared to active viewing.
-There were no significant differences between regulation strategies (all \(p>.05\)).
+To investigate whether ER strategies reduce emotional arousal and physiological respoindng, we conducted separate rmANOVA comparing subjective arousal, \emph{Corrugator}, and \emph{Levator} activity of four strategies (active viewing, distraction, distancing, suppression).
+We found a significant effect of strategy for subjective arousal (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)), \emph{Corrugator} activity (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)), and \emph{Levator} activity (\(F(1.54, 180.41) = 19.95\), \(p < .001\), \(\hat{\eta}^2_G = .089\), 90\% CI \([.043, .134]\), \(\mathrm{BF}_{\textrm{10}} = 3.22 \times 10^{17}\)), indicating that regulation strategies reduced subjective arousal and physiological responding.
+For detailed information on post-hoc tests, please see \protect\hyperlink{SupplementEffectER}{supplementary material}.
 
 \hypertarget{subjective-effort-of-er-strategies}{%
 \paragraph{Subjective effort of ER strategies}\label{subjective-effort-of-er-strategies}}
 
 To investigate whether ER strategies require cognitive effort, we conducted an rmANOVA comparing the subjective effort ratings of four strategies (active viewing, distraction, distancing, suppression).
 We found a significant effect of strategy (\(F(2.92, 347.65) = 128.47\), \(p < .001\), \(\hat{\eta}^2_G = .327\), 90\% CI \([.261, .384]\), \(\mathrm{BF}_{\textrm{10}} = 1.84 \times 10^{37}\)).
-Post-hoc test showed significant higher subjective effort for distraction (\(\eta_{p}^{2}=0.47, [0.42, 1.00]\), \(BF_{10}=\)\(3.61 \times 10^{30}\)), distancing (\(\eta_{p}^{2}=0.41, [0.35, 1.00]\), \(BF_{10}=\)\(1.60 \times 10^{28}\)), and suppression (\(\eta_{p}^{2}=0.30, [0.23, 1.00]\), \(BF_{10}=\)\(1.27 \times 10^{19}\)) compared to active viewing.
-Moreover, we found significantly lower effort during suppression compared with distraction (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\)\(1.61 \times 10^{6}\)) and distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\)\(2.92 \times 10^{1}\)).
+Post-hoc test showed significant higher subjective effort for distraction (\(\eta_{p}^{2}=0.47, [0.42, 1.00]\), \(BF_{10}=\) \(3.61 \times 10^{30}\)), distancing (\(\eta_{p}^{2}=0.41, [0.35, 1.00]\), \(BF_{10}=\) \(1.60 \times 10^{28}\)), and suppression (\(\eta_{p}^{2}=0.30, [0.23, 1.00]\), \(BF_{10}=\) \(1.27 \times 10^{19}\)) compared to active viewing.
+Moreover, we found significantly lower effort during suppression compared with distraction (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\) \(1.61 \times 10^{6}\)) and distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\) 29.19).
+
+\hypertarget{subjective-values-of-er-strategies}{%
+\paragraph{Subjective values of ER strategies}\label{subjective-values-of-er-strategies}}
+
+{[}to be filled{]}
+
+\hypertarget{associations-between-subjective-values-and-flexible-er}{%
+\paragraph{Associations between subjective values and flexible ER}\label{associations-between-subjective-values-and-flexible-er}}
+
+To investigate the ecological validity of the subjective values of ER strategies we calculated, we looked to see if SVs were associated with the actual choice of participants in the choice block.
+Therefore, a \(\chi^{2}\) test with predicted choice (i.e., the strategy with the highest SV of each participant) and actual choice was computed.
+There was a significant association between predicted choice and actual choice (\(\chi^2(4, n = 120) = 115.40\), \(p < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.62 \times 10^{21}\)).
+
+{[} HIER FEHLT NOCH DIE ORDINALE REGRESSION {]}
+
+Last, we investigated whether SVs are associated with ER flexibility.
+We conducted a logistic regression to inspect whether participants' individual \(slopes\) and \(intercepts\) of ordered SVs could predict their ER flexibility score.
+We found neither a significant associations between \(slopes\) of SVs and FlexER score (\(b = -0.36\), 95\% CI \([-1.28, 0.56]\), \(t(117) = -0.77\), \(p = .444\), \(\mathrm{BF}_{\textrm{10}} = 0.72\)), nor between \(intercepts\) and FlexER score (\(b = 1.32\), 95\% CI \([-1.38, 4.02]\), \(t(117) = 0.97\), \(p = .336\), \(\mathrm{BF}_{\textrm{10}} = 0.85\)).
+However, model fit was relatively low (\(R^2 = .03\), \(F(2, 117) = 1.93\), \(p = .150\)).
 
 \hypertarget{exploratory-analyses}{%
 \subsection{3.3. Exploratory analyses}\label{exploratory-analyses}}
@@ -1008,351 +1019,146 @@ An internal consistency of Cronbach's \(\alpha=.88\) was reported\textsuperscrip
 
 \newpage
 
-\hypertarget{pilot-study-subjective-arousal-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}{%
-\subsection{Pilot study: Subjective arousal in the conditions ``Active viewing - neutral'' and ``Active viewing - negative''}\label{pilot-study-subjective-arousal-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}}
-
-ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 1, 15 & 3895.91 & 34.32 *** & .475 & <.001\\
-\hline
-\end{tabular}
-
-\(BF10=\) 1,244.99
-
-Paired contrasts:
+\hypertarget{SupplementNV}{%
+\subsection{Test for normal distribution of predictor variables}\label{SupplementNV}}
 
 \begin{table}[H]
 
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-4}Paired contrasts for the rmANOVA comparing subjective arousal of negative and neutral pictures in the condition "active viewing".}
+\caption{\label{tab:TabNV}Results of Shapiro-Wilk test for normal distribution of subjective arousal and effort ratings for all strategies.}
 
-\begin{tabular}{lllllllll}
+\begin{tabular}{lllll}
 \toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+ & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{$W$} & \multicolumn{1}{c}{$p$}\\
 \midrule
-$View_{neutral} - View_{negative}$ & -129.28 & 22.07 & 15.00 & -5.86 & 0.00 & 794.78 & 0.70 & {}[0.43, 1.00]\\
+Arousal View Neu & 26.63 & 39.12 & 0.68 & 0.00\\
+Arousal View Neg & 187.78 & 87.31 & 0.98 & 0.06\\
+Arousal Distraction & 158.13 & 92.49 & 0.97 & 0.01\\
+Arousal Distancing & 168.62 & 95.75 & 0.98 & 0.04\\
+Arousal Suppression & 163.96 & 87.17 & 0.98 & 0.07\\
+Effort View Neu & 18.15 & 27.37 & 0.65 & 0.00\\
+Effort View Neg & 49.40 & 62.26 & 0.74 & 0.00\\
+Effort Distraction & 208.46 & 96.15 & 0.98 & 0.13\\
+Effort Distancing & 158.26 & 99.50 & 0.97 & 0.01\\
+Effort Suppression & 189.80 & 92.34 & 0.98 & 0.12\\
 \bottomrule
-\addlinespace
 \end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
 
 \end{threeparttable}
 \end{center}
 
 \end{table}
-
-Figure:
-
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigSubjArousalViewPilot-1} \caption{Subjective arousal ratings for the conditions "Active viewing - neutral" and "Active viewing - negative" visualized as boxplots. Each dot represents the arousal rating of a single subject. Bold dots represent outliers.}\label{fig:FigSubjArousalViewPilot}
-\end{figure}
-
-\hypertarget{pilot-study-subjective-arousal-in-the-conditions-active-viewing---negative-distraction-distancing-and-suppression}{%
-\subsection{Pilot study: Subjective arousal in the conditions ``Active viewing - negative'', ``Distraction'', ``Distancing'', and ``Suppression''}\label{pilot-study-subjective-arousal-in-the-conditions-active-viewing---negative-distraction-distancing-and-suppression}}
-
-ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 2.79, 41.89 & 2238.27 & 1.17 & .011 & .332\\
-\hline
-\end{tabular}
-
-\(BF10=\) 0.11
-
-Paired contrasts:
 
 \begin{table}[H]
 
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-5}Paired contrasts for the rmANOVA comparing subjective arousal of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:TabNV}Results of Shapiro-Wilk test for normal distribution of Corrugator and Levator activity for all strategies.}
 
-\begin{tabular}{lllllllll}
+\begin{tabular}{lllll}
 \toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
+ & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{$W$} & \multicolumn{1}{c}{$p$}\\
 \midrule
-$View_{negative} - Distraction$ & -0.74 & 16.14 & 45.00 & -0.05 & 1.00 & 0.26 & 4.68e-05 & {}[0.00, 1.00]\\
-$View_{negative} - Distancing$ & -5.35 & 16.14 & 45.00 & -0.33 & 1.00 & 0.27 & 2.43e-03 & {}[0.00, 1.00]\\
-$View_{negative} - Suppression$ & -26.23 & 16.14 & 45.00 & -1.63 & 0.67 & 1.25 & 0.06 & {}[0.00, 1.00]\\
-$Distraction - Distancing$ & -4.61 & 16.14 & 45.00 & -0.29 & 1.00 & 0.26 & 1.81e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & -25.49 & 16.14 & 45.00 & -1.58 & 0.73 & 0.77 & 0.05 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & -20.88 & 16.14 & 45.00 & -1.29 & 1.00 & 0.52 & 0.04 & {}[0.00, 1.00]\\
+Corrgator View Neu & 0.04 & 6.99 & 0.05 & 0.00\\
+Corrgator View Neg & 1.03 & 7.21 & 0.19 & 0.00\\
+Corrgator Distraction & 0.00 & 7.67 & 0.04 & 0.00\\
+Corrgator Distancing & 0.07 & 3.78 & 0.08 & 0.00\\
+Corrgator Suppression & 0.25 & 1.92 & 0.35 & 0.00\\
+Levator View Neu & 0.09 & 1.84 & 0.38 & 0.00\\
+Levator View Neg & 0.58 & 3.20 & 0.43 & 0.00\\
+Levator Distraction & -0.05 & 1.16 & 0.52 & 0.00\\
+Levator Distancing & -0.03 & 0.92 & 0.48 & 0.00\\
+Levator Suppression & 0.01 & 1.00 & 0.55 & 0.00\\
 \bottomrule
-\addlinespace
 \end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
 
 \end{threeparttable}
 \end{center}
 
 \end{table}
 
-Figure:
+\newpage
 
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigSubjArousalRegPilot-1} \caption{Subjective arousal ratings for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the arousal rating of a single subject. Bold dots represent outliers.}\label{fig:FigSubjArousalRegPilot}
-\end{figure}
-
-\hypertarget{pilot-study-physiological-responding-corrugator-and-levator-activity-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}{%
-\subsection{\texorpdfstring{Pilot study: Physiological responding (\emph{Corrugator} and \emph{Levator} activity) in the conditions ``Active viewing - neutral'' and ``Active viewing - negative''}{Pilot study: Physiological responding (Corrugator and Levator activity) in the conditions ``Active viewing - neutral'' and ``Active viewing - negative''}}\label{pilot-study-physiological-responding-corrugator-and-levator-activity-in-the-conditions-active-viewing---neutral-and-active-viewing---negative}}
-
-\emph{Corrugator}: ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 1, 15 & 1.01 & 9.70 ** & .237 & .007\\
-\hline
-\end{tabular}
-
-\(BF10=\) 6,690,401.91
-
-Paired contrasts:
+\hypertarget{SupplementEffectER}{%
+\subsection{Post-hoc tests of strategies for effects of ER on subjective arousal and physiological responding}\label{SupplementEffectER}}
 
 \begin{table}[H]
 
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-6}Paired contrasts for the rmANOVA comparing physiological responding (Corrugator activity) of negative and neutral pictures in the condition "active viewing".}
+\caption{\label{tab:SupplEffectER}Post-hoc tests for effects of ER strategies on subjective arousal ratings.}
 
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{neutral} - View_{negative}$ & -1.11 & 0.36 & 15.00 & -3.11 & 0.01 & 5,019,313.20 & 0.39 & {}[0.09, 1.00]\\
+$View_{negative} - Distraction$ & 29.65 & 6.68 & 357.00 & 4.44 & 0.00 & 168.48 & 0.05 & {}[0.02, 1.00]\\
+$View_{negative} - Distancing$ & 23.82 & 6.68 & 357.00 & 3.57 & 0.00 & 62.99 & 0.03 & {}[0.01, 1.00]\\
+$View_{negative} - Suppression$ & 19.16 & 6.68 & 357.00 & 2.87 & 0.03 & 1.97 & 0.02 & {}[0.00, 1.00]\\
+$Distraction - Distancing$ & -5.83 & 6.68 & 357.00 & -0.87 & 1.00 & 0.18 & 2.13e-03 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & -10.49 & 6.68 & 357.00 & -1.57 & 0.70 & 0.31 & 6.86e-03 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & -4.66 & 6.68 & 357.00 & -0.70 & 1.00 & 0.14 & 1.36e-03 & {}[0.00, 1.00]\\
 \bottomrule
-\addlinespace
 \end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
 
 \end{threeparttable}
 \end{center}
 
 \end{table}
-
-\emph{Levator}: ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 1, 15 & 0.17 & 7.72 * & .162 & .014\\
-\hline
-\end{tabular}
-
-\(BF10=\) 48.44
-
-Paired contrasts:
 
 \begin{table}[H]
 
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-7}Paired contrasts for the rmANOVA comparing physiological responding (Levator activity) of negative and neutral pictures in the condition "active viewing".}
+\caption{\label{tab:SupplEffectER}Post-hoc tests for effects of ER strategies on Corrugator activity}
 
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{neutral} - View_{negative}$ & -0.40 & 0.14 & 15.00 & -2.78 & 0.01 & 41.02 & 0.34 & {}[0.05, 1.00]\\
+$View_{negative} - Distraction$ & 0.18 & 0.04 & 351.00 & 4.79 & 0.00 & 21,919.73 & 0.06 & {}[0.03, 1.00]\\
+$View_{negative} - Distancing$ & 0.19 & 0.04 & 351.00 & 5.09 & 0.00 & 139,814.01 & 0.07 & {}[0.03, 1.00]\\
+$View_{negative} - Suppression$ & 0.21 & 0.04 & 351.00 & 5.67 & 0.00 & 18,426,055.49 & 0.08 & {}[0.04, 1.00]\\
+$Distraction - Distancing$ & 0.01 & 0.04 & 351.00 & 0.30 & 1.00 & 0.04 & 2.61e-04 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & 0.03 & 0.04 & 351.00 & 0.88 & 1.00 & 0.08 & 2.21e-03 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & 0.02 & 0.04 & 351.00 & 0.58 & 1.00 & 0.05 & 9.51e-04 & {}[0.00, 1.00]\\
 \bottomrule
-\addlinespace
 \end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
 
 \end{threeparttable}
 \end{center}
 
 \end{table}
-
-Figures:
-
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigEMGCorrViewPilot-1} \caption{Corrugator activity for the conditions "Active viewing - neutral" and "Active viewing - negative" visualized as boxplots. Each dot represents the corrugator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGCorrViewPilot}
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigEMGLevViewPilot-1} \caption{Levator activity for the conditions "Active viewing - neutral" and "Active viewing - negative" visualized as boxplots. Each dot represents the levator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGLevViewPilot}
-\end{figure}
-
-\hypertarget{pilot-study-physiological-responding-corrugator-and-levator-activity-in-the-conditionsactive-viewing---negative-distraction-distancing-and-suppression}{%
-\subsection{\texorpdfstring{Pilot study: Physiological responding (\emph{Corrugator} and \emph{Levator} activity) in the conditions''Active viewing - negative'', ``Distraction'', ``Distancing'', and ``Suppression''}{Pilot study: Physiological responding (Corrugator and Levator activity) in the conditions''Active viewing - negative'', ``Distraction'', ``Distancing'', and ``Suppression''}}\label{pilot-study-physiological-responding-corrugator-and-levator-activity-in-the-conditionsactive-viewing---negative-distraction-distancing-and-suppression}}
-
-\emph{Corrugator}: ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 1.53, 22.98 & 1.16 & 5.71 * & .189 & .015\\
-\hline
-\end{tabular}
-
-\(BF10=\) 5,257,689.54
-
-Paired contrasts:
 
 \begin{table}[H]
 
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-8}Paired contrasts for the rmANOVA comparing physiological responding (Corrugator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:SupplEffectER}Post-hoc tests for effects of ER strategies on Levator activity}
 
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - Distraction$ & 0.88 & 0.27 & 45.00 & 3.22 & 0.01 & 4,962.89 & 0.19 & {}[0.05, 1.00]\\
-$View_{negative} - Distancing$ & 0.95 & 0.27 & 45.00 & 3.50 & 0.01 & 616.63 & 0.21 & {}[0.06, 1.00]\\
-$View_{negative} - Suppression$ & 0.92 & 0.27 & 45.00 & 3.40 & 0.01 & 11,678.82 & 0.20 & {}[0.06, 1.00]\\
-$Distraction - Distancing$ & 0.08 & 0.27 & 45.00 & 0.28 & 1.00 & 0.07 & 1.78e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & 0.05 & 0.27 & 45.00 & 0.18 & 1.00 & 0.08 & 7.22e-04 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & -0.03 & 0.27 & 45.00 & -0.10 & 1.00 & 0.06 & 2.36e-04 & {}[0.00, 1.00]\\
+$View_{negative} - Distraction$ & 0.34 & 0.05 & 351.00 & 6.73 & 0.00 & 202,428,623,285.88 & 0.11 & {}[0.07, 1.00]\\
+$View_{negative} - Distancing$ & 0.28 & 0.05 & 351.00 & 5.66 & 0.00 & 39,887,367.63 & 0.08 & {}[0.04, 1.00]\\
+$View_{negative} - Suppression$ & 0.32 & 0.05 & 351.00 & 6.37 & 0.00 & 86,036,487,908.69 & 0.10 & {}[0.06, 1.00]\\
+$Distraction - Distancing$ & -0.05 & 0.05 & 351.00 & -1.07 & 1.00 & 0.22 & 3.26e-03 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & -0.02 & 0.05 & 351.00 & -0.36 & 1.00 & 0.04 & 3.70e-04 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & 0.04 & 0.05 & 351.00 & 0.71 & 1.00 & 0.10 & 1.44e-03 & {}[0.00, 1.00]\\
 \bottomrule
-\addlinespace
 \end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
 
 \end{threeparttable}
 \end{center}
 
 \end{table}
-
-\emph{Levator}: ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 2.07, 31.00 & 0.20 & 8.27 ** & .225 & .001\\
-\hline
-\end{tabular}
-
-\(BF10=\) 672,341.29
-
-Paired contrasts:
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:unnamed-chunk-9}Paired contrasts for the rmANOVA comparing physiological respodning (Levator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{negative} - Distraction$ & 0.42 & 0.13 & 45.00 & 3.24 & 0.01 & 58.02 & 0.19 & {}[0.05, 1.00]\\
-$View_{negative} - Distancing$ & 0.45 & 0.13 & 45.00 & 3.46 & 0.01 & 93.49 & 0.21 & {}[0.06, 1.00]\\
-$View_{negative} - Suppression$ & 0.62 & 0.13 & 45.00 & 4.79 & 0.00 & 6,253.91 & 0.34 & {}[0.16, 1.00]\\
-$Distraction - Distancing$ & 0.03 & 0.13 & 45.00 & 0.22 & 1.00 & 0.07 & 1.06e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & 0.20 & 0.13 & 45.00 & 1.54 & 0.78 & 1.52 & 0.05 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & 0.17 & 0.13 & 45.00 & 1.32 & 1.00 & 0.52 & 0.04 & {}[0.00, 1.00]\\
-\bottomrule
-\addlinespace
-\end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-Figures:
-
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigEMGCorrRegPilot-1} \caption{Corrugator activity for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the corrugator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGCorrRegPilot}
-\end{figure}
-
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigEMGLevRegPilot-1} \caption{Levator activity for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the levator activity of a single trial. Bold dots represent outliers.}\label{fig:FigEMGLevRegPilot}
-\end{figure}
-
-\hypertarget{pilot-study-subjective-effort-in-the-conditions-active-viewing---negative-distraction-distancing-and-suppression}{%
-\subsection{Pilot study: Subjective effort in the conditions ``Active viewing - negative'', ``Distraction'', ``Distancing'', and ``Suppression''}\label{pilot-study-subjective-effort-in-the-conditions-active-viewing---negative-distraction-distancing-and-suppression}}
-
-ANOVA:
-
-\begin{tabular}{l|l|l|l|l|l}
-\hline
-Effect & df & MSE & F & ges & p.value\\
-\hline
-block & 2.38, 35.66 & 4388.19 & 11.13 *** & .185 & <.001\\
-\hline
-\end{tabular}
-
-\(BF10=\) 7.40
-
-Paired contrasts:
-
-\begin{table}[H]
-
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:unnamed-chunk-10}Paired contrasts for the rmANOVA comparing subjective effort of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
-
-\begin{tabular}{lllllllll}
-\toprule
-Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
-\midrule
-$View_{negative} - Distraction$ & -110.72 & 20.85 & 45.00 & -5.31 & 0.00 & 59.77 & 0.39 & {}[0.20, 1.00]\\
-$View_{negative} - Distancing$ & -89.72 & 20.85 & 45.00 & -4.30 & 0.00 & 20.49 & 0.29 & {}[0.12, 1.00]\\
-$View_{negative} - Suppression$ & -88.15 & 20.85 & 45.00 & -4.23 & 0.00 & 33.13 & 0.28 & {}[0.11, 1.00]\\
-$Distraction - Distancing$ & 21.00 & 20.85 & 45.00 & 1.01 & 1.00 & 0.50 & 0.02 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & 22.57 & 20.85 & 45.00 & 1.08 & 1.00 & 0.57 & 0.03 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & 1.57 & 20.85 & 45.00 & 0.08 & 1.00 & 0.26 & 1.27e-04 & {}[0.00, 1.00]\\
-\bottomrule
-\addlinespace
-\end{tabular}
-
-\begin{tablenotes}[para]
-\normalsize{\textit{Note.} $SE$ = standard error, $df$ = degrees of freedom, $t$ = $t$-statistic, $p$ = $p$-value, CI = confidence interval.}
-\end{tablenotes}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
-
-Figure:
-
-\begin{figure}[H]
-\includegraphics[width=0.75\linewidth]{Manuscript_ERED_Stage2_files/figure-latex/FigSubjEffortPilot-1} \caption{Subjective effort ratings for the conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression" visualized as boxplots. Each dot represents the effort rating of a single subject. Bold dots represent outliers.}\label{fig:FigSubjEffortPilot}
-\end{figure}
 
 
 \end{document}
