--- a/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
@@ -27,7 +27,6 @@ base::load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED.RData"))
 \setcounter{section}{19}
 \setcounter{figure}{0}
 \setcounter{table}{1}
-
 \newpage
 
 ## Detailed information on psychometric measures {#SupplementQuestionnaires}
@@ -96,20 +95,24 @@ papaja::apa_table(
   caption = "Post-hoc tests for effects of ER strategies on subjective arousal ratings.",
   escape = FALSE,
   placement = "H",
-  format.args = list(format = "e")) 
+  font_size = "footnotesize"
+  ) 
 
 papaja::apa_table(
   EMGCorrReg_con,
   caption = "Post-hoc tests for effects of ER strategies on Corrugator activity",
   escape = FALSE,
   placement = "H",
+  font_size = "footnotesize"
   )
 
 papaja::apa_table(
   EMGLevReg_con,
   caption = "Post-hoc tests for effects of ER strategies on Levator activity",
   escape = FALSE,
-  placement = "H")
+  placement = "H",
+  font_size = "footnotesize"
+  )
 
 ```
 
