--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -977,7 +977,6 @@ Subjective arousal and effort ratings are assessed after each block using a slid
 \setcounter{section}{19}
 \setcounter{figure}{0}
 \setcounter{table}{1}
-
 \newpage
 
 \hypertarget{SupplementQuestionnaires}{%
@@ -1092,18 +1091,22 @@ Levator Suppression & 0.01 & 1.00 & 0.55 & 0.00\\
 
 \caption{\label{tab:SupplEffectER}Post-hoc tests for effects of ER strategies on subjective arousal ratings.}
 
+\footnotesize{
+
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - Distraction$ & 29.65 & 6.68 & 357.00 & 4.44 & 0.00 & 168.48 & 0.05 & {}[0.02, 1.00]\\
-$View_{negative} - Distancing$ & 23.82 & 6.68 & 357.00 & 3.57 & 0.00 & 62.99 & 0.03 & {}[0.01, 1.00]\\
-$View_{negative} - Suppression$ & 19.16 & 6.68 & 357.00 & 2.87 & 0.03 & 1.97 & 0.02 & {}[0.00, 1.00]\\
+$View_{neg} - Distraction$ & 29.65 & 6.68 & 357.00 & 4.44 & 0.00 & 168.48 & 0.05 & {}[0.02, 1.00]\\
+$View_{neg} - Distancing$ & 23.82 & 6.68 & 357.00 & 3.57 & 0.00 & 62.99 & 0.03 & {}[0.01, 1.00]\\
+$View_{neg} - Suppression$ & 19.16 & 6.68 & 357.00 & 2.87 & 0.03 & 1.97 & 0.02 & {}[0.00, 1.00]\\
 $Distraction - Distancing$ & -5.83 & 6.68 & 357.00 & -0.87 & 1.00 & 0.18 & 2.13e-03 & {}[0.00, 1.00]\\
 $Distraction - Suppression$ & -10.49 & 6.68 & 357.00 & -1.57 & 0.70 & 0.31 & 6.86e-03 & {}[0.00, 1.00]\\
 $Distancing - Suppression$ & -4.66 & 6.68 & 357.00 & -0.70 & 1.00 & 0.14 & 1.36e-03 & {}[0.00, 1.00]\\
 \bottomrule
 \end{tabular}
+
+}
 
 \end{threeparttable}
 \end{center}
@@ -1117,18 +1120,22 @@ $Distancing - Suppression$ & -4.66 & 6.68 & 357.00 & -0.70 & 1.00 & 0.14 & 1.36e
 
 \caption{\label{tab:SupplEffectER}Post-hoc tests for effects of ER strategies on Corrugator activity}
 
+\footnotesize{
+
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - Distraction$ & 0.18 & 0.04 & 351.00 & 4.79 & 0.00 & 21,919.73 & 0.06 & {}[0.03, 1.00]\\
-$View_{negative} - Distancing$ & 0.19 & 0.04 & 351.00 & 5.09 & 0.00 & 139,814.01 & 0.07 & {}[0.03, 1.00]\\
-$View_{negative} - Suppression$ & 0.21 & 0.04 & 351.00 & 5.67 & 0.00 & 18,426,055.49 & 0.08 & {}[0.04, 1.00]\\
+$View_{neg} - Distraction$ & 0.18 & 0.04 & 351.00 & 4.79 & 0.00 & 21,919.73 & 0.06 & {}[0.03, 1.00]\\
+$View_{neg} - Distancing$ & 0.19 & 0.04 & 351.00 & 5.09 & 0.00 & 139,814.01 & 0.07 & {}[0.03, 1.00]\\
+$View_{neg} - Suppression$ & 0.21 & 0.04 & 351.00 & 5.67 & 0.00 & 18,426,055.49 & 0.08 & {}[0.04, 1.00]\\
 $Distraction - Distancing$ & 0.01 & 0.04 & 351.00 & 0.30 & 1.00 & 0.04 & 2.61e-04 & {}[0.00, 1.00]\\
 $Distraction - Suppression$ & 0.03 & 0.04 & 351.00 & 0.88 & 1.00 & 0.08 & 2.21e-03 & {}[0.00, 1.00]\\
 $Distancing - Suppression$ & 0.02 & 0.04 & 351.00 & 0.58 & 1.00 & 0.05 & 9.51e-04 & {}[0.00, 1.00]\\
 \bottomrule
 \end{tabular}
+
+}
 
 \end{threeparttable}
 \end{center}
@@ -1142,18 +1149,22 @@ $Distancing - Suppression$ & 0.02 & 0.04 & 351.00 & 0.58 & 1.00 & 0.05 & 9.51e-0
 
 \caption{\label{tab:SupplEffectER}Post-hoc tests for effects of ER strategies on Levator activity}
 
+\footnotesize{
+
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - Distraction$ & 0.34 & 0.05 & 351.00 & 6.73 & 0.00 & 202,428,623,285.88 & 0.11 & {}[0.07, 1.00]\\
-$View_{negative} - Distancing$ & 0.28 & 0.05 & 351.00 & 5.66 & 0.00 & 39,887,367.63 & 0.08 & {}[0.04, 1.00]\\
-$View_{negative} - Suppression$ & 0.32 & 0.05 & 351.00 & 6.37 & 0.00 & 86,036,487,908.69 & 0.10 & {}[0.06, 1.00]\\
+$View_{neg} - Distraction$ & 0.34 & 0.05 & 351.00 & 6.73 & 0.00 & 202,428,623,285.88 & 0.11 & {}[0.07, 1.00]\\
+$View_{neg} - Distancing$ & 0.28 & 0.05 & 351.00 & 5.66 & 0.00 & 39,887,367.63 & 0.08 & {}[0.04, 1.00]\\
+$View_{neg} - Suppression$ & 0.32 & 0.05 & 351.00 & 6.37 & 0.00 & 86,036,487,908.69 & 0.10 & {}[0.06, 1.00]\\
 $Distraction - Distancing$ & -0.05 & 0.05 & 351.00 & -1.07 & 1.00 & 0.22 & 3.26e-03 & {}[0.00, 1.00]\\
 $Distraction - Suppression$ & -0.02 & 0.05 & 351.00 & -0.36 & 1.00 & 0.04 & 3.70e-04 & {}[0.00, 1.00]\\
 $Distancing - Suppression$ & 0.04 & 0.05 & 351.00 & 0.71 & 1.00 & 0.10 & 1.44e-03 & {}[0.00, 1.00]\\
 \bottomrule
 \end{tabular}
+
+}
 
 \end{threeparttable}
 \end{center}
